--- a/create-rust-app/Cargo.toml
+++ b/create-rust-app/Cargo.toml
@@ -38,7 +38,7 @@ rust-argon2 = { optional=true, version="1.0" }
 rand = { optional=true, version="0.8.5" }
 jsonwebtoken = { optional=true, version="8.2.0" }
 tsync = { optional=true, version="1.6.0" }
-chrono = { optional=true, version = "0.4.23", features = ["serde"] }
+chrono = { optional=true, version = "0.4.23", default-features = false, features = ["clock", "serde"] }
 
 # plugin_dev
 diesel_migrations = { optional=true, version="2.0.0" }
